--- a/docs/_posts/2023-02-02-CoinScan.md
+++ b/docs/_posts/2023-02-02-CoinScan.md
@@ -17,6 +17,7 @@ This is a scan of an old silver coin. You rotate the camera by dragging with the
 
 Unfortunately I only got the point lights working so far, but this should do for now.
 
+<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 <script type="importmap">
 {
     "imports": {
