--- a/docs/_posts/2023-02-02-CoinScan.md
+++ b/docs/_posts/2023-02-02-CoinScan.md
@@ -51,17 +51,21 @@ Unfortunately I only got the point lights working so far, but this should do for
 	const plane = new THREE.Mesh( geometry, material );
 	scene.add( plane );
 	
-	const light1 = new THREE.PointLight( 0xffffff, 0.3);
-	light1.position.set( -0.6, -0.4, 1 );
-	scene.add(light1);
+	function addLight(x,y) {
+		const light = new THREE.PointLight( 0xffffff, 0.1);
+		light.position.set(x,y, 1 );
+		scene.add(light);
+	}
 	
-	const light2 = new THREE.PointLight( 0xffffff, 0.3);
-	light2.position.set( 0, 0.8, 1 );
-	scene.add(light2);
-	
-	const light3 = new THREE.PointLight( 0xffffff, 0.3);
-	light3.position.set( 0.6, -0.4, 1 );
-	scene.add(light3);
+	addLight(-0.5, -0.5);
+	addLight(-0.7, 0);
+	addLight(-0.5, 0.5);
+	addLight(0, -0.7);
+	//addLight(0, 0);
+	addLight(0, 0.7);
+	addLight(0.5, -0.5);
+	addLight(0.7, 0);
+	addLight(0.5, 0.5);
 	
 	camera.position.z = 0.8;
 	
